# llm-web-scraper

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: agent.py  main.py  webscraper.py
src/agent/: __init__.py  extractor_agent.py  scraper_agent.py
src/scraper/: __init__.py  webscraper.py  webtools.py
tests/: conftest.py  test_end2end.py
tests/setup/: generate_tests.py  generation_schema.py
